
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int WSADATA ;


 scalar_t__ WSAStartup (int,int *) ;
 int atoi (char*) ;
 int banner () ;
 int cnx (char*) ;
 int printf (char*) ;
 int start_auth (int,char*,int,int) ;
 int syntax (char*) ;

int main(int argc, char *argv[])
{
 WSADATA wsaData;
 int sock,var=0;

 banner();
 if(argc<4||argc>5) {
  syntax(argv[0]);
  return -1;
  }
if(argc==5) {
 var=atoi(argv[4]);
 if(var>2||var<0) {
  syntax(argv[0]);
  return -1;
  }
 }
if(WSAStartup(0x0101,&wsaData)!=0) {
 printf("error: unable to load winsock\r\n");
 return -1;
 }
 sock=cnx(argv[1]);
if(!sock)
 return -1;
 start_auth(sock,argv[2],atoi(argv[3]),var);
 return 0;
}
